# robotiq

robotiq_2f_140_gripper_visualization/: CMakeLists.txt  README.md  package.xml
robotiq_2f_140_gripper_visualization/config/: visualize.rviz
robotiq_2f_140_gripper_visualization/launch/: view_robot.launch.py
robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f_140_model_macro.xacro
robotiq_2f_85_gripper_visualization/: CMakeLists.txt  README.md  package.xml
robotiq_2f_85_gripper_visualization/launch/: view_robot.launch.py
robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_85_base_link.dae
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper.urdf  robotiq_gripper.urdf.xacro  robotiq_gripper_macro.urdf.xacro
robotiq_2f_c2_gripper_visualization/: CMakeLists.txt  README.md  package.xml
robotiq_2f_c2_gripper_visualization/config/: visualize.rviz
robotiq_2f_c2_gripper_visualization/launch/: view_robot.launch.py
robotiq_bringup/: CMakeLists.txt  README.md  package.xml  robotiq_bringup.repos
robotiq_bringup/config/: robotiq_2f_85_controllers.yaml
robotiq_bringup/launch/: robotiq_2f_85.launch.py  robotiq_2f_85_base.launch.py  robotiq_2f_85_gz.launch.py  robotiq_2f_85_system_position_only.launch.py
robotiq_bringup/scripts/: ignition_movement.sh
robotiq_bringup/worlds/: pick_cube.sdf
