<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_2f_c2_gripper_visualization</name>
  <version>1.0.0</version>
  <description>
    <p>
      Package containing visual components (urdfs, meshes, etc.) for use in simulating
      the 2F-85 or C2 model gripper developed by Robotiq. This package was adapted
      from https://github.com/jhu-lcsr-forks/robotiq.
    </p>
  </description>

  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author>Kel Guerin </author>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
